<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_action"
        android:icon="@drawable/ic_home_black"
        android:title="@string/action_home"
        />
    <item
        android:id="@+id/setting_action"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        ></item>
    <item
        android:id="@+id/saved_action"
        android:icon="@drawable/ic_bookmark"

        android:title="@string/action_saved"
        ></item>
    <item
        android:id="@+id/about_us_action"
        android:icon="@drawable/ic_info_black"
        android:title="@string/about_us" />
    <item
        android:id="@+id/contact_us_action"
        android:icon="@drawable/ic_mail"
        android:title="@string/contact_us" />
    <item
        android:id="@+id/share_action"
        android:icon="@drawable/ic_share"
        android:title="@string/nav_share" />
    <item
        android:id="@+id/policy_action"
        android:title="@string/policy_privacy"
        android:icon="@drawable/ic_assignment"
        />
</menu>
