<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.RegisterActivity">
    <LinearLayout
        android:paddingTop="20dp"
        android:paddingBottom="15dp"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">
        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/account_circle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:tint="@color/white"
            android:id="@+id/imageView3" />

        <TextView
            android:textSize="15sp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:text="@string/please_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/linearLayout2">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_input_layout_name"
                android:layout_width="match_parent"
                android:theme="@style/textview_login"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name">
                <EditText
                    android:id="@+id/register_input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/white"
                    android:inputType="textPersonName"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_input_layout_email"
                android:layout_width="match_parent"
                android:theme="@style/textview_login"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email">
                <EditText
                    android:id="@+id/register_input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/white"
                    android:inputType="textEmailAddress"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_input_layout_password"
                android:layout_width="match_parent"
                android:theme="@style/textview_login"
                android:hint="@string/hint_password"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_input_layout_password_confirm"
                android:layout_width="match_parent"
                android:theme="@style/textview_login"
                android:hint="@string/hint_password_confirm"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_input_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/register_btn"
                android:text="@string/registre_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:theme="@style/Button_login"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/linearLayout2">


            <com.google.android.gms.common.SignInButton
                app:colorScheme="dark"
                android:id="@+id/sign_up_button_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:elevation="0dp"
                android:text="@string/login_gg_text"

                />
            <com.facebook.login.widget.LoginButton
                xmlns:facebook="http://schemas.android.com/apk/res-auto"
                facebook:com_facebook_login_text="@string/registre_fb_text"
                android:layout_margin="3dp"
                android:id="@+id/sign_up_button_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:textSize="15sp"
                android:elevation="2dp"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>