<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.ristana.e_news.ui.activity.ContactActivity">
    <ImageView
        android:background="@color/colorPrimary"
        android:paddingLeft="50dp"
        android:paddingRight="110dp"

        android:tint="@color/white"
        android:src="@drawable/ic_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView" />
    <LinearLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/imageView">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/support_input_layout_email"
            android:theme="@style/textview_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/support_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"

                android:hint="@string/hint_email" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/support_input_layout_name"
            android:layout_width="match_parent"
            android:theme="@style/textview_login"

            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/support_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/hint_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/support_input_layout_message"
            android:layout_width="match_parent"
            android:theme="@style/textview_login"
            android:layout_height="wrap_content">

            <EditText
                android:gravity="top"
                android:lines="4"
                android:id="@+id/support_input_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/hint_message" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:text="@string/send_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/support_button"
            android:layout_weight="1"
            android:padding="16dp"
            android:textColor="@color/white"
            android:theme="@style/Button_login"
            android:elevation="0dp" />
    </LinearLayout>
</RelativeLayout>
